worked on sub category

--- a/SubCategory/addSubCategory.html
+++ b/SubCategory/addSubCategory.html
@@ -31,11 +31,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -84,7 +84,17 @@
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" required />
                   <label for="description">Description:</label>
-                  <textarea type="text" id="description" name="description" cols="4"></textarea>
+                  <textarea
+                    type="text"
+                    id="description"
+                    name="description"
+                    cols="4"
+                  ></textarea>
+
+                  <label for="category">Category:</label>
+                  <select name="category" id="category">
+                    <option value="0">Loading categories...</option>
+                  </select>
 
                   <label for="image">Image:</label>
                   <input
@@ -113,8 +123,8 @@
         </div>
       </div>
     </div>
-    <script src="Script.js"></script>
-    <script src="../SubCategory/subCategory.js"></script>
+    <!-- <script src="Script.js"></script> -->
+    <!-- <script src="../SubCategory/subCategory.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       function previewImage() {
@@ -135,10 +145,10 @@
           preview.src = "";
         }
       }
-    
+
       async function submitForm(event) {
         event.preventDefault();
-        console.log('inside');
+        console.log("inside");
         const name = document.getElementById("name").value;
         const description = document.getElementById("description").value;
         const image = document.getElementById("image").files[0];
@@ -149,23 +159,110 @@
         formData.append("image", image);
 
         try {
-            const response = await fetch("http://localhost:80/BookSellingAPI/api/sub-category/add.php", {
-                method: "POST",
-                body: formData,
+          const response = await fetch(
+            "http://localhost:80/BookSellingAPI/api/sub-category/add.php",
+            {
+              method: "POST",
+              body: formData,
+            }
+          );
+
+          if (response.ok) {
+            // Handle success (e.g., display a success message)
+            console.log("Form submitted successfully!");
+            window.location.href = "banner.html";
+          } else {
+            // Handle error (e.g., display an error message)
+            console.error("Form submission failed!");
+          }
+        } catch (error) {
+          console.error("An error occurred:", error);
+        }
+      }
+    </script>
+    <script>
+      const token = localStorage.getItem("user");
+      function fetchCategoryData() {
+        // Replace 'YOUR_API_URL' with the actual API endpoint
+        console.log("fethichg", token);
+        fetch(
+          "https://api.bhattacharjeesolution.in/book/api/admin-show-category.php",
+          {
+            headers: {
+              token: token,
+            },
+          }
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("data", data);
+            const categorySelect = document.getElementById("category");
+
+            // Clear existing options
+            categorySelect.innerHTML = "";
+
+            // Add a default option
+            const defaultOption = document.createElement("option");
+            defaultOption.value = "0";
+            defaultOption.textContent = "Select a category";
+            categorySelect.appendChild(defaultOption);
+
+            // Populate the select with data from the API
+            data.forEach((category) => {
+              const option = document.createElement("option");
+              option.value = category.id;
+              option.textContent = category.name;
+              categorySelect.appendChild(option);
             });
 
-            if (response.ok) {
-                // Handle success (e.g., display a success message)
-                console.log("Form submitted successfully!");
-                window.location.href = 'banner.html';
-            } else {
-                // Handle error (e.g., display an error message)
-                console.error("Form submission failed!");
-            }
-        } catch (error) {
-            console.error("An error occurred:", error);
-        }
-    }
+            // Add an event listener to fetch subcategories when a category is selected
+            // categorySelect.addEventListener("change", fetchSubcategories);
+          })
+          .catch((error) => {
+            console.error("Error fetching data:", error);
+          });
+      }
+
+      function submitForm(event) {
+        event.preventDefault(); // Prevent the default form submission behavior
+
+        // Get form data
+        const name = document.getElementById("name").value;
+        const description = document.getElementById("description").value;
+        const category = document.getElementById("category").value;
+        const image = document.getElementById("image").files[0]; // Assuming you want to upload a single image
+
+        // Create a FormData object to send the data
+        const formData = new FormData();
+        formData.append("name", name);
+        formData.append("description", description);
+        formData.append("categoryId", category);
+        formData.append("image", image);
+
+        // Send the data to the server using AJAX or Fetch API
+        fetch(
+          "https://api.bhattacharjeesolution.in/book/api/add-subcategory.php",
+          {
+            method: "POST",
+            body: formData,
+            headers: {
+              token: token,
+            },
+          }
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            // Handle the response from the server (e.g., show a success message)
+            console.log("Data sent successfully:", data);
+            window.location.href = "subCategory.html";
+          })
+          .catch((error) => {
+            // Handle errors (e.g., show an error message)
+            console.error("Error sending data:", error);
+          });
+      }
+
+      window.addEventListener("load", fetchCategoryData);
     </script>
   </body>
 </html>
