--- a/SubCategory/subCategory.html
+++ b/SubCategory/subCategory.html
@@ -81,7 +81,9 @@
                   "
                 >
                   <button class="btnadd btn-primary mb-3">
-                    <a href="/SubCategory/addSubCategory.html">Add Sub Category</a>
+                    <a href="/SubCategory/addSubCategory.html"
+                      >Add Sub Category</a
+                    >
                   </button>
                   <form>
                     <div class="form-group">
@@ -113,15 +115,13 @@
                     </tr>
                   </thead>
 
-                  <tbody  id="banner-table-body">
-                   
-                  </tbody>
+                  <tbody id="banner-table-body"></tbody>
                 </table>
               </div>
 
               <div class="popup-overlay" id="editPopup">
                 <div class="popup-container addCategory">
-                  <h2>Edit Item</h2>
+                  <h2>Edit Items</h2>
                   <form action="#" method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required />
@@ -134,6 +134,11 @@
                       required
                     ></textarea>
 
+                    <label for="category">Category:</label>
+                    <select name="category" id="category">
+                      <option value="0">Loading categories...</option>
+                    </select>
+
                     <label for="image">Image:</label>
                     <input
                       type="file"
@@ -142,7 +147,12 @@
                       accept="image/*"
                       required
                     />
-                    <img id="preimage" name="preimage" width="100%" height="100px"/>
+                    <img
+                      id="preimage"
+                      name="preimage"
+                      width="100%"
+                      height="100px"
+                    />
 
                     <div class="actions">
                       <button type="submit" id="submitEdit">Submit</button>
@@ -157,30 +167,30 @@
         </div>
       </div>
     </div>
-    <script src="../Script.js"></script>
+    <!-- <script src="../Script.js"></script> -->
     <script src="subCategory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       var fileInput = document.getElementById("fileInput");
-var imgElement = document.getElementById("preimage");
+      var imgElement = document.getElementById("preimage");
 
-// Add an event listener to the file input
-fileInput.addEventListener("change", function(event) {
-  // Check if a file was selected
-  if (fileInput.files && fileInput.files[0]) {
-    // Create a FileReader to read the selected file
-    var reader = new FileReader();
+      // Add an event listener to the file input
+      fileInput.addEventListener("change", function (event) {
+        // Check if a file was selected
+        if (fileInput.files && fileInput.files[0]) {
+          // Create a FileReader to read the selected file
+          var reader = new FileReader();
 
-    // Set up an event listener for when the FileReader finishes reading the file
-    reader.onload = function(e) {
-      // Set the src attribute of the img element to the data URL of the selected file
-      imgElement.src = e.target.result;
-    };
+          // Set up an event listener for when the FileReader finishes reading the file
+          reader.onload = function (e) {
+            // Set the src attribute of the img element to the data URL of the selected file
+            imgElement.src = e.target.result;
+          };
 
-    // Read the selected file as a data URL
-    reader.readAsDataURL(fileInput.files[0]);
-  }
-});
+          // Read the selected file as a data URL
+          reader.readAsDataURL(fileInput.files[0]);
+        }
+      });
     </script>
     <script>
       // JavaScript to handle the popup
