working on pagenation

--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -111,6 +111,15 @@
 
                   <tbody id="banner-table-body"></tbody>
                 </table>
+                <div
+                  id="pagination"
+                  style="
+                    display: flex;
+                    justify-content: right;
+                    align-items: center;
+                    gap: 5px;
+                  "
+                ></div>
               </div>
 
               <div class="popup-overlay" id="editPopup">
