--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -167,23 +167,20 @@
                 aria-labelledby="deleteBannerModalLabel"
                 aria-hidden="true"
               >
-                <div
-                  class="modal-dialog"
-                  style="background-color: rgba(0, 0, 0, 0.5)"
-                >
+                <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="deleteBannerModalLabel">
                         Confirm Deletion
                       </h5>
-                      <button
+                      <!-- <button
                         type="button"
                         class="close"
                         data-dismiss="modal"
                         aria-label="Close"
                       >
                         <span aria-hidden="true">&times;</span>
-                      </button>
+                      </button> -->
                     </div>
                     <div class="modal-body">
                       Are you sure you want to delete this banner?
