--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -150,6 +150,27 @@
                   <!-- Add your edit form or content here -->
                 </div>
               </div>
+
+              <div class="modal fade" id="deleteBannerModal" tabindex="-1" aria-labelledby="deleteBannerModalLabel"  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="deleteBannerModalLabel">Confirm Deletion</h5>
+                      
+                    </div>
+                    <div class="modal-body">
+                      Are you sure you want to delete this banner?
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                      <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+
+
             </div>
           </div>
         </div>
