--- a/Coupon/addCoupon.html
+++ b/Coupon/addCoupon.html
@@ -23,6 +23,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="/blockMobile.js"></script>
   </head>
 
   <body>
