--- a/Product/Product.html
+++ b/Product/Product.html
@@ -190,12 +190,25 @@
                 </div>
               </div>
 
-              <div class="modal fade" id="deleteBannerModal" tabindex="-1" aria-labelledby="deleteBannerModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="deleteBannerModal"
+                tabindex="-1"
+                aria-labelledby="deleteBannerModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="deleteBannerModalLabel">Confirm Deletion</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <h5 class="modal-title" id="deleteBannerModalLabel">
+                        Confirm Deletion
+                      </h5>
+                      <button
+                        type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close"
+                      >
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
@@ -203,18 +216,30 @@
                       Are you sure you want to delete this banner?
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                      <button type="button" class="btn btn-danger" id="confirmDeleteBanner">Delete</button>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-dismiss="modal"
+                      >
+                        Cancel
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-danger"
+                        id="confirmDeleteBanner"
+                      >
+                        Delete
+                      </button>
                     </div>
                   </div>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="/blockMobile.js"></script>
     <script src="../Script.js"></script>
     <script src="product.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
