--- a/Product/addProduct.html
+++ b/Product/addProduct.html
@@ -139,6 +139,7 @@
       </div>
     </div>
     <!-- <script src="Script.js"></script> -->
+    <script src="/blockMobile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       const token = localStorage.getItem("user");
@@ -235,7 +236,7 @@
             subcategories.forEach((subcategory) => {
               console.log("suc id: ", categoryId);
               console.log("suc id: ", subcategory.id);
-              if (subcategory.id == categoryId) {
+              if (subcategory.categoryId == categoryId) {
                 const option = document.createElement("option");
                 option.value = subcategory.id;
                 option.textContent = subcategory.name;
