--- a/SubCategory/addSubCategory.html
+++ b/SubCategory/addSubCategory.html
@@ -125,6 +125,7 @@
     </div>
     <!-- <script src="Script.js"></script> -->
     <!-- <script src="../SubCategory/subCategory.js"></script> -->
+    <script src="/blockMobile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       function previewImage() {
