--- a/SubCategory/subCategory.html
+++ b/SubCategory/subCategory.html
@@ -145,7 +145,6 @@
                       id="fileInput"
                       name="image"
                       accept="image/*"
-                      required
                     />
                     <img
                       id="preimage"
@@ -163,32 +162,49 @@
                 </div>
               </div>
 
-              <div class="modal fade" id="deleteBannerModal" tabindex="-1" aria-labelledby="deleteBannerModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="deleteBannerModal"
+                tabindex="-1"
+                aria-labelledby="deleteBannerModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="deleteBannerModalLabel">Confirm Deletion</h5>
-                      
+                      <h5 class="modal-title" id="deleteBannerModalLabel">
+                        Confirm Deletion
+                      </h5>
                     </div>
                     <div class="modal-body">
                       Are you sure you want to delete this banner?
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                      <button type="button" class="btn btn-danger" id="confirmDeleteBanner">Delete</button>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-dismiss="modal"
+                      >
+                        Cancel
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-danger"
+                        id="confirmDeleteBanner"
+                      >
+                        Delete
+                      </button>
                     </div>
                   </div>
                 </div>
               </div>
-              
-
-
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- <script src="../Script.js"></script> -->
+    <script src="/blockMobile.js"></script>
     <script src="subCategory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
