--- a/Users/Users.html
+++ b/Users/Users.html
@@ -151,6 +151,7 @@
         </div>
       </div>
     </div>
+    <script src="/blockMobile.js"></script>
     <script src="script.js"></script>
     <script src="../Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
