--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -162,7 +162,10 @@
                 data-keyboard="false"
               >
                 <div class="modal-dialog">
-                  <div class="modal-content">
+                  <div
+                    class="modal-content"
+                    style="background-color: rgb(225, 225, 225)"
+                  >
                     <div class="modal-header">
                       <h5 class="modal-title" id="deleteBannerModalLabel">
                         Confirm Deletion
