--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -4,31 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banner</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../Style.css" />
+    /> -->
     <link rel="stylesheet" href="../Category/table.css" />
     <link rel="stylesheet" href="../Category/popUpStyle.css" />
     <link rel="stylesheet" href="../Category/addCategory.css" />
+    <script src="/blockMobile.js"></script>
     <link
-      rel="stylesheet"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
+    />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    />
+    <link
+    rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="/blockMobile.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.6/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../Style.css" />
+    <style>
+      .col-10 {
+        /* padding: 0; */
+      }
+
+      .row {
+        width: 100%;
+        max-width: 100%;
+        margin: 0;
+      }
+    </style>
   </head>
 
   <body>
     <div class="dashboard">
-      <div class="container">
+      <div class="">
         <div class="row">
           <div class="col-2 sidebar">
             <iframe
@@ -89,6 +131,7 @@
                         id="searchbar"
                         class="form-control"
                         placeholder="search"
+                        oninput="searchTable()"
                       />
                     </div>
                   </form>
@@ -112,6 +155,15 @@
 
                   <tbody id="banner-table-body"></tbody>
                 </table>
+                <div id="pagination">
+                  <button id="prev-button" onclick="prevPage()">
+                    <i class="fa-solid fa-arrow-left"></i>
+                  </button>
+                  <button id="next-button" onclick="nextPage()">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </button>
+                  <span id="page-info">Page 1 of 1</span>
+                </div>
               </div>
 
               <div class="popup-overlay" id="editPopup">
