--- a/Book/book.html
+++ b/Book/book.html
@@ -12,7 +12,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     /> -->
-    <link rel="stylesheet" href="../Style.css" />
     <link rel="stylesheet" href="../Category/table.css" />
     <link rel="stylesheet" href="../Category/popUpStyle.css" />
     <link rel="stylesheet" href="../Category/addCategory.css" />
@@ -61,6 +60,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../Style.css" />
     <style>
       .col-10 {
         /* padding: 0; */
@@ -184,10 +184,10 @@
                 <div class="popup-container addCategory">
                   <h2>Edit Items</h2>
                   <div style="max-height: 80vh; overflow-y: auto">
+                    <!-- onsubmit="submitForm(event)" -->
                     <form
                       action="#"
                       method="post"
-                      onsubmit="submitForm(event)"
                       enctype="multipart/form-data"
                     >
                       <label for="name">Name:</label>
@@ -207,7 +207,6 @@
                         id="image"
                         name="image"
                         accept="image/*"
-                        required
                         onchange="previewImage()"
                       />
                       <div class="imgPreviewsx">
