--- a/Orders/OrderDetail.html
+++ b/Orders/OrderDetail.html
@@ -84,6 +84,8 @@
                     <tr>
                       <th>Order Id</th>
                       <th>Product Name</th>
+                      <th>Payment method</th>
+                      <th>Total Price</th>
                       <th>Product Order Date</th>
                       <th>Status</th>
                       <th></th>
@@ -91,6 +93,15 @@
                   </thead>
                   <tbody id="table-body"></tbody>
                 </table>
+                <div id="pagination">
+                  <button id="prev-button" onclick="prevPage()">
+                    <i class="fa-solid fa-arrow-left"></i>
+                  </button>
+                  <button id="next-button" onclick="nextPage()">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </button>
+                  <span id="page-info">Page 1 of 1</span>
+                </div>
               </div>
             </div>
           </div>
