--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
           <div class="col-12">
             <form id="loginForm" onsubmit="return handleLogin()">
               <div class="login_box">
-                <h1>BOOKING MANAGEMENT</h1>
+                <h1>Bodhik Prokashan</h1>
                 <!-- <p>ULTIMATE EDUCATION ERP</p> -->
                 <h2>ADMIN LOGIN</h2>
                 <input
