--- a/EBook/addebook.html
+++ b/EBook/addebook.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Book</title>
+    <title>Add E-Book</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -70,10 +70,10 @@
               <!-- maincontent   -->
               <div>
                 <button class="btnadd btn-primary mb-3">
-                  <a href="/Book/book.html">back</a>
+                  <a href="/EBook/ebook.html">back</a>
                 </button>
                 <!-- <a href="/Banner/Banner.html">back</a> -->
-                <h2 class="mt-3">Add Book</h2>
+                <h2 class="mt-3">Add E-Book</h2>
               </div>
 
               <div class="bars">
@@ -125,6 +125,9 @@
 
                   <label for="discount">Discount Price:</label>
                   <input type="number" id="discount" name="discount" />
+
+                  <label for="delivery">Delivery Price:</label>
+                  <input type="number" id="delivery" name="delivery" />
 
                   <label for="quantity">Quantity:</label>
                   <input type="number" id="quantity" name="quantity" required />
@@ -276,7 +279,8 @@
         formData.append("quantity", document.getElementById("quantity").value);
         formData.append("discount", document.getElementById("discount").value);
         formData.append("lang", document.getElementById("lang").value);
-        formData.append("type", "book");
+        formData.append("delivery", document.getElementById("delivery").value);
+        formData.append("type", "ebook");
         formData.append("image", document.getElementById("image").files[0]);
         formData.append("content", document.getElementById("pdf").files[0]);
         formData.append("barcode", document.getElementById("barcode").files[0]);
@@ -301,7 +305,7 @@
             console.log(data);
             if (data.status === "success") {
               alert("Book Added!");
-              window.location.href = "book.html";
+              window.location.href = "ebook.html";
             }
           })
           .catch((error) => {
