--- a/EBook/ebook.html
+++ b/EBook/ebook.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book</title>
+    <title>EBook</title>
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -120,7 +120,7 @@
               </div>
               <!-- maincontent   -->
               <div class="mt-3">
-                <h2>All Book</h2>
+                <h2>All E-Book</h2>
 
                 <div
                   style="
@@ -130,7 +130,7 @@
                   "
                 >
                   <button class="btnadd mb-3">
-                    <a href="/Book/addbook.html">Add Book</a>
+                    <a href="/EBook/addebook.html">Add E-Book</a>
                   </button>
                   <form>
                     <div class="form-group">
@@ -166,7 +166,6 @@
                       <th>Actions</th>
                     </tr>
                   </thead>
-
                   <tbody id="banner-table-body"></tbody>
                 </table>
                 <div id="pagination">
@@ -284,7 +283,7 @@
                       </h5>
                     </div>
                     <div class="modal-body">
-                      Are you sure you want to delete this banner?
+                      Are you sure you want to delete this ebook?
                     </div>
                     <div class="modal-footer">
                       <button
@@ -312,7 +311,7 @@
     </div>
     <!-- <script src="../Script.js"></script> -->
     <script src="/blockMobile.js"></script>
-    <script src="book.js"></script>
+    <script src="ebook.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       var fileInput = document.getElementById("fileInput");
