added pre loader

--- a/Coupon/addCoupon.html
+++ b/Coupon/addCoupon.html
@@ -24,9 +24,12 @@
       referrerpolicy="no-referrer"
     />
     <script src="/blockMobile.js"></script>
+    <link rel="stylesheet" href="/loader.css" />
+    <script src="/loader.js"></script>
   </head>
 
   <body>
+    <div class="loader"></div>
     <div class="dashboard">
       <div class="container">
         <div class="row">
