--- a/Banner.html
+++ b/Banner.html
@@ -24,9 +24,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/loader.css" />
+    <script src="/loader.js"></script>
   </head>
 
   <body>
+    <div class="loader"></div>
     <div class="dashboard">
       <div class="container">
         <div class="row">
