--- a/Users/Users.html
+++ b/Users/Users.html
@@ -23,9 +23,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/loader.css" />
+    <script src="/loader.js"></script>
   </head>
 
   <body>
+    <div class="loader"></div>
     <div class="dashboard">
       <div class="container">
         <div class="row">
