--- a/Coupon/addCoupon.html
+++ b/Coupon/addCoupon.html
@@ -87,20 +87,50 @@
                 <i class="fa-solid fa-bars"></i>
               </div>
               <div class="addCategory">
-                <form action="#" method="post">
-                  <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" required />
+                <form action="#" method="post" onsubmit="submitForm(event)">
+                  <label for="code">Code:</label>
+                  <input type="text" id="code" name="code" required />
 
-                  <label for="validity">Validity and Starting:</label>
-                  <input type="text" id="validity" name="validity" required />
+                  <label for="type">Type:</label>
+                  <select id="type" name="type" required>
+                    <option value="value">Value</option>
+                    <option value="percent">Percent</option>
+                  </select>
 
-                  <label for="discountPrice">Discount Price::</label>
+                  <label for="value">Discount:</label>
+                  <input type="number" id="value" name="value" required />
+
+                  <label for="valid_from">Valid From:</label>
+                  <input
+                    type="date"
+                    id="valid_from"
+                    name="valid_from"
+                    required
+                  />
+
+                  <label for="valid_until">Valid Until:</label>
+                  <input
+                    type="date"
+                    id="valid_until"
+                    name="valid_until"
+                    required
+                  />
+
+                  <label for="minimum_amount">Minimum Amount:</label>
+                  <input
+                    type="number"
+                    id="minimum_amount"
+                    name="minimum_amount"
+                    required
+                  />
+
+                  <!-- <label for="discountPrice">Discount Price:</label>
                   <input
                     id="discountPrice"
                     name="discountPrice"
                     type="number"
                     required
-                  />
+                  /> -->
 
                   <button type="submit">Submit</button>
                 </form>
@@ -131,24 +161,35 @@
       });
     </script>
     <script>
+      const token = localStorage.getItem("user");
       async function submitForm(event) {
         event.preventDefault();
         console.log("inside");
-        const name = document.getElementById("name").value;
-        const validity = document.getElementById("validity").value;
-        const discountPrice = document.getElementById("discountPrice").files[0];
+        const minimum_amount = document.getElementById("minimum_amount").value;
+        const valid_until = document.getElementById("valid_until").value;
+        const valid_from = document.getElementById("valid_from").value;
+        const value = document.getElementById("value").value;
+        const type = document.getElementById("type").value;
+        const code = document.getElementById("code").value;
+        // const discountPrice = document.getElementById("discountPrice").files[0];
 
         const formData = new FormData();
-        formData.append("name", name);
-        formData.append("validity", validity);
-        formData.append("discountPrice", discountPrice);
+        formData.append("code", code);
+        formData.append("type", type);
+        formData.append("value", value);
+        formData.append("valid_from", valid_from);
+        formData.append("valid_until", valid_until);
+        formData.append("minimum_amount", minimum_amount);
 
         try {
           const response = await fetch(
-            "https://api.bhattacharjeesolution.in/book/api/category/add.php",
+            "https://api.bhattacharjeesolution.in/book/api/coupon.php",
             {
               method: "POST",
               body: formData,
+              headers: {
+                token: token,
+              },
             }
           );
 
