worked on pages

--- a/Courses/DetailCourse.html
+++ b/Courses/DetailCourse.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Courses</title>
+    <title>Detail Courses</title>
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -119,33 +119,9 @@
               <!-- maincontent   -->
 
               <div class="container mt-3">
-                <h2>All Courses</h2>
+                <h2>Details Courses</h2>
                 <!-- <h2 class="mt-5">Category</h2> -->
                 <!--  <button >Add</button> -->
-                <div
-                  style="
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                  "
-                >
-                  <button class="btnadd mb-3" id="addClassButton">
-                    <a href="/Courses/AddCourses.html">Add Courses</a>
-                  </button>
-                  <form>
-                    <div class="form-group">
-                      <!-- <div class="searbar"> -->
-                      <input
-                        type="text"
-                        name="searchbar"
-                        id="searchbar"
-                        class="form-control"
-                        placeholder="search"
-                        oninput="searchTable()"
-                      />
-                    </div>
-                  </form>
-                </div>
               </div>
 
               <div class="bars">
@@ -157,30 +133,36 @@
                   id="category-table"
                 >
                   <!-- <table class="styled-table"> -->
+                  <thead></thead>
+                  <tbody id="category-table-body"></tbody>
+                </table>
+              </div>
+              <div>
+                <h6>Resource</h6>
+                <table
+                  class="table table-hover table-bordered"
+                  id="table-video"
+                >
                   <thead>
                     <tr>
-                      <th>#</th>
-                      <th>Name</th>
-                      <th>Image</th>
-                      <th>Price</th>
-                      <th>Discount</th>
+                      <th>Day</th>
+                      <th>Title</th>
                       <th>Type</th>
                       <th>Description</th>
-                      <th>Add Resourses</th>
+                      <th>Link</th>
                       <th>Action</th>
                     </tr>
                   </thead>
-                  <tbody id="category-table-body"></tbody>
                 </table>
-                <div id="pagination">
-                  <button id="prev-button" onclick="prevPage()">
-                    <i class="fa-solid fa-arrow-left"></i>
-                  </button>
-                  <button id="next-button" onclick="nextPage()">
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </button>
-                  <span id="page-info">Page 1 of 1</span>
-                </div>
+                <button class="btnadd mb-3" id="addClassButton">
+                  <a href="/Courses/AddVideo.html">Add Video</a>
+                </button>
+                <button class="btnadd mb-3" id="addClassButton">
+                  <a href="/Courses/AddTest.html">Add Tests</a>
+                </button>
+                <button class="btnadd mb-3" id="addClassButton">
+                  <a href="/Courses/AddPdf.html">Add Pdf</a>
+                </button>
               </div>
 
               <div class="popup-overlay" id="editPopup">
@@ -188,72 +170,31 @@
                   <h2>Edit Item</h2>
                   <div style="max-height: 80vh; overflow-y: auto">
                     <form action="#" method="post">
-                      <label for="name">Name:</label>
-                      <input type="text" id="name" name="name" required />
+                      <label for="name">Title:</label>
+                      <input type="text" id="nameedit" name="name" required />
 
                       <br />
                       <label for="description">Description:</label>
                       <textarea
-                        id="description"
-                        name="description"
+                        id="descriptionedit"
+                        name="descriptionedit"
                         rows="4"
                         required
                       ></textarea>
 
-                      <!-- <label for="image">Image:</label>
+                      <label for="dayno">Day Number:</label>
+                      <input type="number" id="daynoedit" name="dayno" />
+
+                      <label for="pdf">Content ( PDF File ):</label>
                       <input
                         type="file"
-                        id="image"
-                        name="image"
-                        accept="image/*"
-                        required
-                        onchange="previewImage()"
+                        id="pdfedit"
+                        name="pdf"
+                        accept=".pdf"
                       />
-                      <br />
-                      <div class="imgPreview">
-                        <img
-                          id="imagePreview"
-                          src="#"
-                          alt="Image Preview"
-                          style="
-                            display: none;
-                            max-width: 200px;
-                            max-height: 200px;
-                          "
-                        />
-                      </div> -->
 
-                      <label for="category">Category:</label>
-                      <select name="category" id="category">
-                        <option value="0">Loading categories...</option>
-                      </select>
-
-                      <label for="mrp">MRP:</label>
-                      <input type="number" id="mrp" name="mrp" />
-
-                      <label for="discount">Discount Price:</label>
-                      <input type="number" id="discount" name="discount" />
-
-                      <label for="edittype">Type:</label>
-                      <select id="edittype" name="edittype" required>
-                        <option value="pet">PETest</option>
-                        <option value="video">Video</option>
-                        <option value="test">Test</option>
-                        <option value="pdf">PDF</option>
-                      </select>
-                      <br />
-
-                      <label for="lang">Language:</label>
-                      <select id="lang" name="lang" required>
-                        <option value="in">INDIAN</option>
-                        <option value="en">ENGLISH</option>
-                      </select>
-
-                      <label for="isfree">Is Free:</label>
-                      <select id="isfree" name="isfree" required>
-                        <option value="false">Not free</option>
-                        <option value="true">Free</option>
-                      </select>
+                      <label for="link">Link:</label>
+                      <input type="text" id="linkedit" name="link" />
 
                       <div
                         style="display: flex; gap: 5px; justify-content: right"
@@ -261,7 +202,7 @@
                         <button style="background-color: red" id="closemodal">
                           Close
                         </button>
-                        <button type="submit">Submit</button>
+                        <button type="submit">Save</button>
                       </div>
                     </form>
                   </div>
@@ -312,7 +253,7 @@
     </div>
 
     <!-- <script src="../Script.js"></script> -->
-    <script src="courses.js"></script>
+    <script src="detailCourse.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       var fileInput = document.getElementById("fileInput");
