--- a/Coupon/Coupon.html
+++ b/Coupon/Coupon.html
@@ -265,7 +265,7 @@
                     <div
                       style="display: flex; gap: 5px; justify-content: right"
                     >
-                      <button style="background-color: red" id="closemodal">
+                      <button type="button" style="background-color: red" id="closemodal">
                         Close
                       </button>
                       <button type="submit">Submit</button>
