add video and pdf pages

--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -201,7 +201,9 @@
 
                     <div class="actions">
                       <button type="submit" id="submitEdit">Submit</button>
-                      <button class="closebtn" id="closePopup">Close</button>
+                      <button type="button" class="closebtn" id="closePopup">
+                        Close
+                      </button>
                     </div>
                   </form>
                   <!-- Add your edit form or content here -->
