--- a/Courses/AddCourses.html
+++ b/Courses/AddCourses.html
@@ -73,10 +73,10 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div>
+              <!-- <div>
                 <a href="/Courses/Courses.html">back</a>
                 <h2 class="mt-5">Add Courses</h2>
-              </div>
+              </div> -->
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
