--- a/Courses/AddPet.html
+++ b/Courses/AddPet.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Tests</title>
+    <title>Add PET</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -43,8 +43,6 @@
               scrolling="no"
               height="100%"
             ></iframe>
-            <!-- In your main HTML page -->
-            <!-- #include virtual="sidebar.html" -->
           </div>
 
           <!-- dashboard -->
@@ -75,7 +73,7 @@
               <!-- maincontent   -->
               <div>
                 <a href="/Courses/DetailCourse.html">back</a>
-                <h2 class="mt-5">Add Tests - <span id="coursename"></span></h2>
+                <h2 class="mt-5">Add PET - <span id="coursename"></span></h2>
               </div>
 
               <div class="bars">
@@ -145,7 +143,7 @@
         try {
           // const response = await fetch("https://api.bhattacharjeesolution.in/book/api/category/add.php", {
           const response = await fetch(
-            "https://api.bhattacharjeesolution.in/book/api/test.php",
+            "https://api.bhattacharjeesolution.in/book/api/pet.php",
             {
               method: "POST",
               body: formData,
