make changes on about and terms page

--- a/Aboutus/aboutus.html
+++ b/Aboutus/aboutus.html
@@ -86,7 +86,7 @@
                   "
                 >
                   <button class="btnadd btn-primary mb-3">
-                    <a href="/Aboutus/addaboutus.html">Add About us</a>
+                    <a href="/Aboutus/addaboutus.html">Edit About us</a>
                   </button>
                   <form>
                     <div class="form-group">
