--- a/Terms & Conditions/aboutus.html
+++ b/Terms & Conditions/aboutus.html
@@ -87,7 +87,7 @@
                 >
                   <button class="btnadd btn-primary mb-3">
                     <a href="/Terms & Conditions/addaboutus.html"
-                      >Terms & Conditions</a
+                      >Edit Terms & Conditions</a
                     >
                   </button>
                   <form>
