--- a/Aboutus/addaboutus.html
+++ b/Aboutus/addaboutus.html
@@ -81,7 +81,7 @@
                 <button class="btnadd btn-primary mb-3">
                   <a href="/Aboutus/aboutus.html">back</a>
                 </button>
-                <h2 class="mt-5">Add Aboutus</h2>
+                <h2 class="mt-5">Edit Aboutus</h2>
               </div>
 
               <div class="bars">
@@ -134,6 +134,32 @@
     </script>
     <script>
       const token = localStorage.getItem("user");
+      let odata;
+
+      function fetchDataFromAPI() {
+        fetch("https://api.bhattacharjeesolution.in/book/api/aboutus.php", {
+          headers: {
+            "Content-Type": "application/json",
+            token: token,
+          },
+        }) // Replace with your API endpoint
+          .then(function (response) {
+            console.log(response);
+            if (!response.ok) {
+              throw new Error("Network response was not ok");
+            }
+            return response.json(); // Parse the response as JSON
+          })
+          .then(function (data) {
+            // Call the populateBannerTableWithData function with the retrieved data
+            console.log("data:", data);
+            odata = data;
+            document.getElementById("description").value = data.about;
+          })
+          .catch(function (error) {
+            console.error("Error fetching data:", error);
+          });
+      }
 
       async function submitForm(event) {
         event.preventDefault();
@@ -142,13 +168,15 @@
 
         const formData = {
           about: name,
+          terms: odata.terms,
         };
+        console.log(formData);
 
         try {
           const response = await fetch(
             "https://api.bhattacharjeesolution.in/book/api/aboutus.php",
             {
-              method: "POST",
+              method: "PUT",
               body: JSON.stringify(formData),
               headers: {
                 token: token,
@@ -168,6 +196,8 @@
           console.error("An error occurred:", error);
         }
       }
+
+      window.addEventListener("load", fetchDataFromAPI);
     </script>
     <!-- <script>
       fetch("../Layout/DashboardSidebar.html")
