--- a/Terms & Conditions/addaboutus.html
+++ b/Terms & Conditions/addaboutus.html
@@ -134,6 +134,33 @@
     </script>
     <script>
       const token = localStorage.getItem("user");
+      let odata;
+
+      function fetchDataFromAPI() {
+        console.log("fetching");
+        fetch("https://api.bhattacharjeesolution.in/book/api/aboutus.php", {
+          headers: {
+            "Content-Type": "application/json",
+            token: token,
+          },
+        }) // Replace with your API endpoint
+          .then(function (response) {
+            console.log(response);
+            if (!response.ok) {
+              throw new Error("Network response was not ok");
+            }
+            return response.json(); // Parse the response as JSON
+          })
+          .then(function (data) {
+            // Call the populateBannerTableWithData function with the retrieved data
+            console.log("data:", data);
+            odata = data;
+            document.getElementById("description").value = data.terms;
+          })
+          .catch(function (error) {
+            console.error("Error fetching data:", error);
+          });
+      }
 
       async function submitForm(event) {
         event.preventDefault();
@@ -142,7 +169,9 @@
 
         const formData = {
           terms: name,
+          about: odata.about,
         };
+        console.log("form:", formData);
 
         try {
           const response = await fetch(
@@ -168,6 +197,8 @@
           console.error("An error occurred:", error);
         }
       }
+
+      window.addEventListener("load", fetchDataFromAPI);
     </script>
     <!-- <script>
       fetch("../Layout/DashboardSidebar.html")
